--- a/index.html
+++ b/index.html
@@ -616,9 +616,9 @@
       JavaScript/jQuery according to http://browserdiet.com/en/ for better performance
     **************** -->
     <!-- STYLE SWITCH STYLESHEET ONLY FOR DEMO -->
-    <link rel="stylesheet" href="demo/demo.css">
-    <script type="text/javascript" src="demo/styleswitcher.js"></script>
-    <script type="text/javascript" src="demo/demo.js"></script>
+    <!-- <link rel="stylesheet" href="demo/demo.css"> -->
+    <!-- <script type="text/javascript" src="demo/styleswitcher.js"></script> -->
+    <!-- <script type="text/javascript" src="demo/demo.js"></script> -->
 </body>
 
 <!-- Mirrored from cvresumetemplate.com/maha-personal-cv-resume-html-template/home-two-w.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2019 16:31:07 GMT -->
