--- a/index.html
+++ b/index.html
@@ -235,6 +235,18 @@
                                         <div class="candidatos">
                                             <div class="parcial">
                                                 <div class="info">
+                                                    <div class="nome">Bootstrap</div>
+                                                    <div class="percentagem-num">68%</div>
+                                                </div>
+                                                <div class="progressBar">
+                                                    <div class="percentagem" style="width: 46%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                        <div class="candidatos">
+                                            <div class="parcial">
+                                                <div class="info">
                                                     <div class="nome">javascript</div>
                                                     <div class="percentagem-num">40%</div>
                                                 </div>
@@ -243,6 +255,41 @@
                                                 </div>
                                             </div>
                                         </div>
+                                          <div class="candidatos">
+                                            <div class="parcial">
+                                                <div class="info">
+                                                    <div class="nome">Adobe Photoshop</div>
+                                                    <div class="percentagem-num">70%</div>
+                                                </div>
+                                                <div class="progressBar">
+                                                    <div class="percentagem" style="width: 38%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                          <div class="candidatos">
+                                            <div class="parcial">
+                                                <div class="info">
+                                                    <div class="nome">Adobe XD</div>
+                                                    <div class="percentagem-num">90%</div>
+                                                </div>
+                                                <div class="progressBar">
+                                                    <div class="percentagem" style="width: 38%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="candidatos">
+                                            <div class="parcial">
+                                                <div class="info">
+                                                    <div class="nome">GIT (source code management system)</div>
+                                                    <div class="percentagem-num">650%</div>
+                                                </div>
+                                                <div class="progressBar">
+                                                    <div class="percentagem" style="width: 38%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+
                                     </div>
                                 </div>
                             </div>
