--- a/index.html
+++ b/index.html
@@ -360,14 +360,14 @@
            PORTFOLIO
         ===================
         -->
-<!--         <section class="mh-portfolio" id="mh-portfolio">
+        <section class="mh-portfolio" id="mh-portfolio">
             <div class="container">
                 <div class="row section-separator">
                     <div class="section-title col-sm-12 wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">
                         <h3>Recent Portfolio</h3>
                     </div>
                     <div class="part col-sm-12">
-                        <div class="portfolio-nav col-sm-12" id="filter-button">
+                        <!-- <div class="portfolio-nav col-sm-12" id="filter-button">
                             <ul>
                                 <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
                                 <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
@@ -375,73 +375,61 @@
                                 <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Mockups</span></li>
                                 <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
                             </ul>
-                        </div>
+                        </div> -->
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <div class="portfolioContainer row">
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
                                     <figure>
                                         <img src="assets/images/portfolio/g1.jpg" alt="img04">
-                                        <figcaption class="fig-caption">
+                                        <!-- <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
                                             <a data-fancybox data-src="#mh"></a>
-                                        </figcaption>
+                                        </figcaption> -->
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui mockup">
+                                <div class="grid-item col-md-6 col-sm-6 col-xs-12 ui mockup">
                                     <figure>
-                                        <img src="assets/images/portfolio/g2.png" alt="img04">
-                                        <figcaption class="fig-caption">
+                                        <img src="assets/images/portfolio/g2.jpg" alt="img04">
+                                       <!--  <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
                                             <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
+                                        </figcaption> -->
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
                                     <figure>
-                                        <img src="assets/images/portfolio/g3.png" alt="img04">
-                                        <figcaption class="fig-caption">
+                                        <img src="assets/images/portfolio/g3.jpg" alt="img04">
+                                        <!-- <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
                                             <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
+                                        </figcaption> -->
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
+                                <div class="grid-item col-md-6 col-sm-6 col-xs-12 branding">
                                     <figure>
-                                        <img src="assets/images/portfolio/g5.png" alt="img04">
-                                        <figcaption class="fig-caption">
+                                        <img src="assets/images/portfolio/g4.jpg" alt="img04">
+                                        <!-- <figcaption class="fig-caption">
                                             <i class="fa fa-search"></i>
                                             <h5 class="title">Creative Design</h5>
                                             <span class="sub-title">Photograpy</span>
                                             <a href="assets/images/portfolio/g5.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
+                                        </figcaption> -->
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 user-interface">
+                                <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
                                     <figure>
-                                        <img src="assets/images/portfolio/g4.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g4.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
+                                        <img src="assets/images/portfolio/g5.jpg" alt="img04">
                                     </figure>
                                 </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
+                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
                                     <figure>
                                         <img src="assets/images/portfolio/g6.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g6.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
                                     </figure>
                                 </div>
                                 <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
@@ -476,12 +464,41 @@
                                             <a href="assets/images/portfolio/g7.jpg" data-fancybox="gallery"></a>
                                         </figcaption>
                                     </figure>
-                                </div>
-                            </div> <!-- End: .grid .project-gallery -->
-                        </div> <!-- End: .grid .project-gallery -->
-                    </div> <!-- End: .part -->
-                </div> <!-- End: .row -->
+                                </div> -->
+                            </div> <!-- End: .grid .project-gallery !-->
+                        </div> <!-- End: .grid .project-gallery !-->
+                    </div> <!-- End: .part !-->
+                </div> <!-- End: .row !-->
             </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
             <div class="mh-portfolio-modal" id="mh">
                 <div class="container">
                     <div class="row mh-portfolio-modal-inner">
@@ -520,7 +537,7 @@
                     </div>
                 </div>
             </div>
-        </section> -->
+        </section>
         
         <!--
         ===================
