--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="mh-about-inner">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
-                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m a Tamuna, junior Front-End Developer ,I know HTML, CSS and now I learn JS.
+                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m a Tamar kopadze, junior Front-End Developer, I am motivated to grow professionally every day and for that I need to work with a good and friendly team !
                            </p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
@@ -367,59 +367,26 @@
                         <h3>Recent Portfolio</h3>
                     </div>
                     <div class="part col-sm-12">
-                        <!-- <div class="portfolio-nav col-sm-12" id="filter-button">
-                            <ul>
-                                <li data-filter="*" class="current wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s"> <span>All Categories</span></li>
-                                <li data-filter=".user-interface" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s"><span>Web Design</span></li>
-                                <li data-filter=".branding" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s"><span>Branding</span></li>
-                                <li data-filter=".mockup" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s"><span>Mockups</span></li>
-                                <li data-filter=".ui" class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.5s"><span>Photography</span></li>
-                            </ul>
-                        </div> -->
                         <div class="mh-project-gallery col-sm-12 wow fadeInUp" id="project-gallery" data-wow-duration="0.8s" data-wow-delay="0.5s">
                             <div class="portfolioContainer row">
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
                                     <figure>
                                         <img src="assets/images/portfolio/g1.jpg" alt="img04">
-                                        <!-- <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a data-fancybox data-src="#mh"></a>
-                                        </figcaption> -->
                                     </figure>
                                 </div>
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 ui mockup">
                                     <figure>
                                         <img src="assets/images/portfolio/g2.jpg" alt="img04">
-                                       <!--  <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g2.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption> -->
                                     </figure>
                                 </div>
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
                                     <figure>
                                         <img src="assets/images/portfolio/g3.jpg" alt="img04">
-                                        <!-- <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g3.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption> -->
                                     </figure>
                                 </div>
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 branding">
                                     <figure>
                                         <img src="assets/images/portfolio/g4.jpg" alt="img04">
-                                        <!-- <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g5.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption> -->
                                     </figure>
                                 </div>
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
@@ -427,78 +394,12 @@
                                         <img src="assets/images/portfolio/g5.jpg" alt="img04">
                                     </figure>
                                 </div>
-                                <!-- <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g6.png" alt="img04">
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g8.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g8.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 ui">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g9.png" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g9.png" data-fancybox data-src="#mh"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div>
-                                <div class="grid-item col-md-4 col-sm-6 col-xs-12 branding">
-                                    <figure>
-                                        <img src="assets/images/portfolio/g7.jpg" alt="img04">
-                                        <figcaption class="fig-caption">
-                                            <i class="fa fa-search"></i>
-                                            <h5 class="title">Creative Design</h5>
-                                            <span class="sub-title">Photograpy</span>
-                                            <a href="assets/images/portfolio/g7.jpg" data-fancybox="gallery"></a>
-                                        </figcaption>
-                                    </figure>
-                                </div> -->
+                                
                             </div> <!-- End: .grid .project-gallery !-->
                         </div> <!-- End: .grid .project-gallery !-->
                     </div> <!-- End: .part !-->
                 </div> <!-- End: .row !-->
             </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
             <div class="mh-portfolio-modal" id="mh">
                 <div class="container">
                     <div class="row mh-portfolio-modal-inner">
