--- a/index.html
+++ b/index.html
@@ -160,6 +160,10 @@
                                     <li><span>html</span></li>
                                     <li><span>css</span></li>
                                     <li><span>Javascript</span></li>
+                                    <li><span>Bootstrap</span></li>
+                                    <li><span>Adobe Photoshop</span></li>
+                                    <li><span>Adobe XD</span></li>
+                                    <li><span>GIT (source code management system)</span></li>
                                 </ul>
                             </div>
                             <!-- <a href="#" class="btn btn-fill wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.4s">Downlaod CV <i class="fa fa-download"></i></a> -->
