Work experience + MySQL

--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
                                             <div class="parcial">
                                                 <div class="info">
                                                     <div class="nome">javascript</div>
-                                                    <div class="percentagem-num">40%</div>
+                                                    <div class="percentagem-num">55%</div>
                                                 </div>
                                                 <div class="progressBar">
-                                                    <div class="percentagem" style="width: 40%;"></div>
+                                                    <div class="percentagem" style="width: 55%;"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -289,6 +289,17 @@
                                                 </div>
                                                 <div class="progressBar">
                                                     <div class="percentagem" style="width: 65%;"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="candidatos">
+                                            <div class="parcial">
+                                                <div class="info">
+                                                    <div class="nome">MySQL</div>
+                                                    <div class="percentagem-num">40%</div>
+                                                </div>
+                                                <div class="progressBar">
+                                                    <div class="percentagem" style="width: 40%;"></div>
                                                 </div>
                                             </div>
                                         </div>
@@ -351,6 +362,7 @@
                         <div class="col-sm-12 col-md-6">
                             <div class="mh-work">
                                  <h3>Work Experience</h3>
+                                 <p>I have completed a 6-month Front-end developer internship at "Aviorco", from 01.02.2019 February to 01.08.2019 August.</p>
                                 
                             </div>
                         </div>
