Add information in About me

--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
                                     <li><span>css</span></li>
                                     <li><span>Javascript</span></li>
                                     <li><span>Bootstrap</span></li>
+                                    <li><span>MySQL</span></li>
                                     <li><span>Adobe Photoshop</span></li>
                                     <li><span>Adobe XD</span></li>
                                     <li><span>GIT (source code management system)</span></li>
