--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <div class="col-sm-12 col-md-6">
                         <div class="mh-about-inner">
                             <h2 class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.1s">About Me</h2>
-                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m a Tamar Kopadze, junior Front-End Developer, I am motivated to grow professionally every day and for that,  I need to work with a good and friendly team!
+                            <p class="wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.2s">Hello, I’m Tamar Kopadze, junior Front-End Developer, I am motivated to grow professionally every day and for that,  I need to work with a good and friendly team!
                            </p>
                             <div class="mh-about-tag wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.3s">
                                 <ul>
