--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                 </div>
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 ui mockup">
                                     <figure>
-                                        <img src="assets/images/portfolio/g2.jpg" alt="img04">
+                                        <img src="assets/images/portfolio/g2.png" alt="img04">
                                     </figure>
                                 </div>
                                 <div class="grid-item col-md-6 col-sm-6 col-xs-12 user-interface">
