--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                         <div class="col-sm-6">
                             <div class="hero-img wow fadeInUp" data-wow-duration="0.8s" data-wow-delay="0.6s">
                                 <div class="img-border">
-                                    <img style="width: 393px; height: 397px;" src="assets/images/tamar.jpg" alt=""  class="img-fluid">
+                                    <img style="width: 393px; height: 397px;" src="assets/images/tam.jpg" alt=""  class="img-fluid">
                                 </div>
                             </div>
                         </div>
