--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
     
 <!-- Mirrored from cvresumetemplate.com/maha-personal-cv-resume-html-template/home-two-w.html by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 25 May 2019 16:30:16 GMT -->
 <head>
-        <title>tamkopadze.com</title>
+        <title>Tamar Kopadze</title>
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
